2304	2009-10-08	Kevin Kamel <kamelkev@mailermailer.com>

	* Initial release to world.

2307	2009-10-08	Kevin Kamel <kamelkev@mailermailer.com>

	* Tweaks to do correct release to CPAN

2534	2010-01-26	Kevin Kamel <kamelkev@mailermailer.com>

	* Updates by Vivek Khera (vivek@khera.org)
	  - Remove comment stripping of HTML passed through the Inliner

2536	2010-04-26	Kevin Kamel <kamelkev@mailermailer.com>

	* Suggested update by Vivek Khera (vivek@khera.org)
	  - adjust TreeParser to override skippable end tags
	* Adjust TreeParser to allow html comments to persist through
	  processing

2540	2010-04-27	Kevin Kamel <kamelkev@mailermailer.com>

	* Include a number of updates as suggested by Michael Peters <mpeters@plusthree.com>
	  - do not skip over style blocks with undefined media types
	  - add feature to take previously defined HTML::TreeParser so
            users can modify the parameters the TreeParser has
	  - skip css psuedo attributes that cannot be inlined

2544	2010-04-27	Kevin Kamel <kamelkev@mailermailer.com>

        * Update the regex for skipping over non-inlineable psuedo attributes
        * In addition to skipping psuedo attributes, skip over @, like @import

2669	2010-08-19	Kevin Kamel <kamelkev@mailermailer.com>

	* Include a number of contributions from Michael Peters <mpeters@plusthree.com>
          - do not die if there is no style container within passed document
          - do not die if comments are encountered within <style> blocks
          - contribution of tests to ensure described functionality matches up
          - respect order of CSS rules for better style cascade
        * Added option to selectively strip out class and id attributes via constructor param
        * Added automatic collapsing of overridden attributes, assisted by Vivek Khera <vivek@khera.org>
        * Restructured parts of code and added some get methods to ease future testing
        * Adjusted some variable names to be more correct
